--- a/src/globalStyles/variables.scss
+++ b/src/globalStyles/variables.scss
@@ -1,3 +1,5 @@
 //e.g. $mutationColor:#990000; will then be usable in any local scss file or css module
 
 $mutationColor:blue;
+
+$portalWidth: 1240px;
