--- a/src/shared/components/query/styles.module.scss
+++ b/src/shared/components/query/styles.module.scss
@@ -7,6 +7,7 @@
   }
 
   :global(ul.nav.nav-tabs li.active a) {
+    background: #fcfcfc;
     border-top: 2px solid #1982b8;
     color: #333;
     font-weight: 500;
@@ -28,6 +29,7 @@
   }
 
   .QueryContainer {
+    background: #fcfcfc;
     border: 1px solid #ddd;
     border-top: none;
     padding: 10px;
@@ -64,13 +66,16 @@
   }
 }
 
+.CancerStudySelector,
 .GeneticProfileSelector,
 .DataTypePrioritySelector,
 .CaseSetSelector,
 .GeneSetSelector {
+  background: #fff;
   padding: 10px;
   border: 1px solid #ddd;
   border-radius: 2px;
+  box-shadow: 0 0 1px #e9e9e9;
 }
 
 .CancerStudySelector {
@@ -78,6 +83,7 @@
   overflow: hidden;
   user-select: none;
   height: 305px;
+  padding: 0px;
 
   label {
     display: flex;
@@ -89,8 +95,6 @@
   }
 
   .cancerStudySelectorHeader {
-    background-color: #1982b8;
-    border-bottom: 1px solid rgb(17, 116, 167);
     padding: 10px;
     margin: 8px 0 0 0;
     display: flex;
@@ -167,7 +171,6 @@
   }
 
   div.cancerStudySelectorBody {
-    border: 1px solid #ddd;
     border-bottom-left-radius: 2px;
     border-bottom-right-radius: 2px;
     flex: 1;
