--- a/src/globalStyles/global.scss
+++ b/src/globalStyles/global.scss
@@ -54,4 +54,9 @@ th.reactable-header-sort-asc:after {
 
 .mainTabs > .tab-content {
   padding-top:20px;
+  hr {
+    margin-top:40px;
+    margin-bottom:40px;
+  }
 }
+
