--- a/src/globalStyles/global.scss
+++ b/src/globalStyles/global.scss
@@ -88,5 +88,23 @@ th.reactable-header-sort-asc:after {
 
 }
 
+.urlError {
+  width:500px;
+  margin:0 auto;
+  text-align:center;
+  i.fa-warning {
+    font-size:80px;
+  }
+  h3 {
+    margin-bottom:20px;
+  }
+  ul {
+    list-style:none;
+    li {
+      padding-bottom:7px;
+    }
+  }
+}
+
 
 
