add active tab border
Former-commit-id: b8b8fc1dad8c8d2c533588dd21f95099bb9ae59a

--- a/src/globalStyles/global.scss
+++ b/src/globalStyles/global.scss
@@ -63,6 +63,12 @@ th.reactable-header-sort-asc:after {
   > .nav {
     width:$portalWidth;
     margin:0 auto;
+
+    .active a {
+      border-top:3px solid $brand-primary !important;
+      padding-top:8px;
+    }
+
   }
 
   > .tab-content {
