fix some styles for onkokb card
Former-commit-id: c4913ebccf9af05bc6720e158a351697b505088a

--- a/src/shared/components/annotation/styles/oncoKbCard.scss
+++ b/src/shared/components/annotation/styles/oncoKbCard.scss
@@ -6,20 +6,6 @@
 .oncokb-card * {
   border-collapse: collapse;
   box-sizing: border-box; }
-.oncokb-card .z-depth-0 {
-  box-shadow: none !important; }
-.oncokb-card .z-depth-1, .oncokb-card .collapsible {
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12); }
-.oncokb-card .z-depth-1-half {
-  box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15); }
-.oncokb-card .z-depth-2 {
-  box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); }
-.oncokb-card .z-depth-3 {
-  box-shadow: 0 12px 15px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19); }
-.oncokb-card .z-depth-4 {
-  box-shadow: 0 16px 28px 0 rgba(0, 0, 0, 0.22), 0 25px 55px 0 rgba(0, 0, 0, 0.21); }
-.oncokb-card .z-depth-5 {
-  box-shadow: 0 27px 24px 0 rgba(0, 0, 0, 0.2), 0 40px 77px 0 rgba(0, 0, 0, 0.22); }
 .oncokb-card ul {
   padding: 0; }
 .oncokb-card ul li {
@@ -245,7 +231,7 @@
   margin-right: 0; }
 .oncokb-card .footer {
   width: 100%;
-  padding-top: 0;
+  padding-top: 3px;
   line-height: 32px;
   height: 32px; }
 .oncokb-card .footer .oncokb-logo {
