minor style tweak for annotation column

--- a/src/shared/components/annotation/styles/annotation.module.scss
+++ b/src/shared/components/annotation/styles/annotation.module.scss
@@ -4,9 +4,10 @@
   float: left;
   line-height: 24px;
   display: inline-block;
+  margin-top: -4px;
 }
 
 .annotation-item img {
-  margin: 6px 0 2px 6px;
+  margin: 4px 0 2px 6px;
 }
 
