change color of section titles (h4)
Former-commit-id: 0450667290bb597372609f3cc167061792bc4a78

--- a/src/globalStyles/global.scss
+++ b/src/globalStyles/global.scss
@@ -82,6 +82,10 @@ th.reactable-header-sort-asc:after {
     border-bottom:1px solid #ddd;
     margin-top:-1px;
 
+    h4 {
+      color:$brand-primary;
+    }
+
     hr {
       margin-top:40px;
       margin-bottom:40px;
