all tooltip icones in patient Timeline get little hand

--- a/src/pages/patientView/timeline/styles.scss
+++ b/src/pages/patientView/timeline/styles.scss
@@ -23,6 +23,15 @@
     -moz-transform: translate(0px,20px); /* Firefox */
 }
 
+#timeline circle {
+  cursor: pointer;
+}
+
+#timeline g text {
+  cursor:pointer;
+}
+
+
 .coloredDiv {
     height:20px; width:20px; float:left;
 }
