tighten padding in bootstrap tables

--- a/src/globalStyles/global.scss
+++ b/src/globalStyles/global.scss
@@ -120,5 +120,10 @@ th.reactable-header-sort-asc:after {
   }
 }
 
+.table tbody tr td {
+  padding:6px 10px !important;
+  border-top:none;
+}
+
 
 
