--- a/my-index.ejs
+++ b/my-index.ejs
@@ -6,11 +6,9 @@
     <script>
         window.devContext = true;
         window.defaultRoute = "/patient";
-        // TODO: this is patient view link injected through JSP, connecting to
-        // another system (DARWIN) at MSKCC. This prolly be a service further
-        // down the line.
-        // Uncomment to test
-        // window.darwinAccessUrl = "https://en.wikipedia.org/wiki/Charles_Darwin";
+        // uncomment to enable Darwin internal MSKCC service patient view link
+        // uses checkDarwinAccess.do service from cbioportal/cbioportal
+        // window.enableDarwin = true;
 
         // Set default API in case none is specified in .env
         __API_ROOT__ = 'cbioportal-rc.herokuapp.com';
