--- a/src/pages/pageHeader/styles.scss
+++ b/src/pages/pageHeader/styles.scss
@@ -1,8 +1,6 @@
 .cbioOnePageApp {
 
-
-  padding: 99px 20px 20px 20px;
-
+  padding-top:10px;
 
   header {
     padding: 20px;
@@ -18,6 +16,7 @@
       padding: 0;
       margin: 0;
     }
+    display:none;
 
   }
 
