--- a/src/globalStyles/global.scss
+++ b/src/globalStyles/global.scss
@@ -5,7 +5,7 @@ body {
   background:#f5f5f5 !important;
 }
 
-.cbioportal-frontend .btn-default {
+.btn-default {
   background-image: linear-gradient(to bottom,#fff 0,#eee 100%);
 }
 
@@ -70,7 +70,7 @@ th.reactable-header-sort-asc:after {
 
     .active a {
       border-top:3px solid $brand-primary !important;
-      padding-top:8px;
+      padding-top:9px;
     }
 
   }
@@ -84,11 +84,12 @@ th.reactable-header-sort-asc:after {
 
     h4 {
       color:$brand-primary;
+      margin-top:0px;
     }
 
     hr {
-      margin-top:40px;
-      margin-bottom:40px;
+      margin-top:10px;
+      margin-bottom:15px;
     }
 
     > .msk-tab {
