--- a/src/shared/components/msktable/styles.scss
+++ b/src/shared/components/msktable/styles.scss
@@ -5,3 +5,15 @@ th.sort-des:after {
 th.sort-asc:after {
   content: ' \25B2';
 }
+
+.topPagination {
+  .textBetweenButtons {
+    opacity: 1.00 !important;
+  }
+}
+
+.tableMainToolbar {
+  .form-group {
+    margin-bottom: 5px;
+  }
+}
