by hiding the tab by position instead of display:none, we avoid issues with svg rendering when hidden
Former-commit-id: 0f26c558001affc00bd2cd26be990529ec4f8d51

--- a/src/globalStyles/global.scss
+++ b/src/globalStyles/global.scss
@@ -129,3 +129,9 @@ th.reactable-header-sort-asc:after {
 .table {
   margin-bottom: 5px;
 }
+
+.hiddenByPosition {
+  position: absolute;
+  top: -9999px;
+  left: -9999px;
+}
