--- a/src/pages/patientView/patient.scss
+++ b/src/pages/patientView/patient.scss
@@ -1,7 +1,9 @@
+
 .patientPageHeader {
 
   position:relative;
   padding-left:45px;
+  display:flex;
 
   td {
     vertical-align:top;
@@ -10,15 +12,21 @@
   }
 
   .studyMetaBar {
-    position:absolute;
-    top:0;
-    right:0;
     text-align:right;
+    flex-grow:1;
 
-    .cohortNav {
-      margin-top:3px;
+    .studyMetaBar_studyName {
+      white-space: nowrap;
+      max-width:400px;
+      text-overflow: ellipsis;
+      display:inline-block;
+      overflow:hidden;
     }
 
+  }
+
+  .patientDataTable {
+    flex-grow:1;
   }
 
   .patientIcon {
@@ -32,10 +40,16 @@
     .patientSample {
       display:inline-block;
       background-color:#ddd;
-      padding:2px 5px;
-      margin-right:7px;
+      padding:1px 2px;
+      margin-right:3px;
       border-radius:3px;
-      margin-bottom:7px;
+      margin-bottom:3px;
+      font-size:11px;
+
+      svg {
+        position:relative;
+        top:1px;
+      }
     }
 
   }
