--- a/src/shared/components/simpleTable/styles.scss
+++ b/src/shared/components/simpleTable/styles.scss
@@ -2,4 +2,9 @@ th {
   border-top:1px dashed #ddd !important;
   padding-left: 10px;
   padding-bottom: 5px;
+  background-color: rgb(255,255,255); // solid background
+}
+
+tbody>tr:nth-of-type(even) { // solid background - hard coded hack, react-bootstrap .table-striped makes ODD # rows grey
+  background-color: rgb(255,255,255);
 }
