workaround for linux corruption of unicode char in template for react-bootstrap modal
Former-commit-id: 89f380da5bf5cf3f38d9e94c67186fea80b2a6ed

--- a/src/globalStyles/global.scss
+++ b/src/globalStyles/global.scss
@@ -135,3 +135,15 @@ th.reactable-header-sort-asc:after {
   top: -9999px;
   left: -9999px;
 }
+
+// corrects for a problem with build of react-bootstrap (unicode corrupted when build on linux  machines)
+.modal-header .close {
+
+  &::before {
+    content: "✖";
+  }
+
+  span {
+    display:none;
+  }
+}
