LazyMobXTable external data store, and row highlighting
Signed-off-by: Abeshouse, Adam A./Sloan Kettering Institute <abeshoua@mskcc.org>

Former-commit-id: 5926d0af330598c6e7baaebb0c20da3d892e9a8e

--- a/src/shared/components/simpleTable/styles.scss
+++ b/src/shared/components/simpleTable/styles.scss
@@ -5,6 +5,14 @@ th {
   background-color: rgb(255,255,255); // solid background
 }
 
+tbody>tr:nth-of-type(odd).highlight {
+  background-color: #E0E000 !important;
+}
+
 tbody>tr:nth-of-type(even) { // solid background - hard coded hack, react-bootstrap .table-striped makes ODD # rows grey
   background-color: rgb(255,255,255);
+}
+
+tbody>tr:nth-of-type(even).highlight {
+  background-color: #E9E900;
 }
