Fix cBioPortal/cbioportal#2388 clinical wrapping
Puts clinical data and link in same span with flex-wrap set to wrap. So the
clinical data in the patient view header wraps as expected.

--- a/src/pages/patientView/patientHeader/style/clinicalAttributes.scss
+++ b/src/pages/patientView/patientHeader/style/clinicalAttributes.scss
@@ -16,6 +16,7 @@ $sample-color-xenograft: pink;
 /* Do not display clinical attributes on default */
 .clinical-spans {
     display: inline-flex;
+    flex-wrap: wrap;
 
     .clinical-attribute {
         display: none;
