Edited testimonials and barGraph.

--- a/src/shared/components/testimonials/testimonials.module.scss
+++ b/src/shared/components/testimonials/testimonials.module.scss
@@ -5,6 +5,11 @@
 
         .testimonial-blockquote {
             opacity: 1;
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
 
             &.test-trans-enter {
                 opacity: 0.01;
