edit bargraph implementation
f#ixedWdith

--- a/src/globalStyles/global.scss
+++ b/src/globalStyles/global.scss
@@ -179,24 +179,36 @@ th.reactable-header-sort-asc:after {
   }
 }
 
-.contentWrapper {
-  display:flex;
-  justify-content:space-between;
-  background:#fff;
-  min-height:500px;
 
-  h1 {
-    font-size:22px;
-  }
-
-  h3 {
-    color:#cfd9ea;
-  }
-
+.fixedWidth {
   #mainColumn {
     flex:1;
     padding: $gutterWidth;
+    line-height:26px;
+
   }
+
+}
+
+.contentWrapper {
+  display:flex;
+  justify-content:space-between;
+  min-height:500px;
+
+  &.fixedWidth {
+    background:#fff;
+  }
+
+  h1 {
+    font-size:22px;
+    margin-top:0;
+  }
+
+  h3 {
+    color:$brand-primary;
+    font-size:19px;
+  }
+
 
   #rightColumn {
     background:#F1F6FE;
@@ -209,7 +221,6 @@ th.reactable-header-sort-asc:after {
         border-bottom:1px solid #cfd9ea;
         margin: 0 0 8px 0;
         padding-bottom:5px;
-        font-size:18px;
       }
       padding: 0 $gutterWidth $gutterWidth $gutterWidth;
     }
@@ -232,7 +243,7 @@ th.reactable-header-sort-asc:after {
 }
 
 .fixedWidth .contentWidth {
-  width:1200px;
+  width:1222px;
   margin:0 auto;
   display:flex;
 
