--- a/src/globalStyles/variables.scss
+++ b/src/globalStyles/variables.scss
@@ -11,7 +11,6 @@ $darkBrown: #585755;
 $lightBlue: #dee9f1;
 $mediumBlue: #1982b8;
 
-
 $lightGrey: #ececec;
 $mediumGrey: #ddd;
 $darkGrey: #999;
@@ -28,3 +27,5 @@ $greenSuccess: #11a747;
 $gutterWidth: 20px;
 
 $brand-primary: #3786C2;
+
+$borderColor:$mediumGrey;
