--- a/src/shared/components/sectionHeader/styles.module.scss
+++ b/src/shared/components/sectionHeader/styles.module.scss
@@ -6,7 +6,8 @@ div.SectionHeader {
   }
 
   h2 {
-    font: normal normal 700 16px/22px 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font: normal normal 700 16px/22px 'Helvetica Neue', Helvetica, Arial, sans-serif !important;
+    color:#333 !important;
     flex-grow: 2;
     margin: 0;
   }
