--- a/src/globalStyles/global.scss
+++ b/src/globalStyles/global.scss
@@ -27,7 +27,7 @@ div {
   text-align:left;
 }
 
-  /* Buttons */
+/* Buttons */
 
 .cta { // "Call To Action"
   background: linear-gradient(to bottom, #1f8cc5 50%, #1982b8 100%);
@@ -181,10 +181,10 @@ th.reactable-header-sort-asc:after {
   }
 }
 
-header {
-  padding-left:$gutterWidth;
-  padding-right:$gutterWidth;
-}
+//header {
+//  padding-left:$gutterWidth;
+//  padding-right:$gutterWidth;
+//}
 
 #mainColumn {
   padding: $gutterWidth 0;
@@ -199,8 +199,6 @@ header {
   }
 
   .contentWrapper {
-    display:flex;
-    justify-content:space-between;
     background:#f5f5f5;
   }
 
@@ -210,15 +208,24 @@ header {
   }
 
   &.twoColumn {
-    .contentWidth {
-      padding-right:0;
+    .contentWrapper {
+      .contentWidth {
+        padding-right: 0;
+      }
     }
   }
 
 }
 
-.twoColumn #mainColumn {
-  padding-right:$gutterWidth;
+.twoColumn {
+  #mainColumn {
+    padding-right: $gutterWidth;
+  }
+  .contentWrapper {
+    .contentWidth {
+      padding-right: 0;
+    }
+  }
 }
 
 
@@ -279,19 +286,34 @@ header {
 
 }
 
-.fixedWidth .contentWrapper .contentWidth {
-  width:1222px;
+.fixedWidth .contentWidth {
+  width:1000px;
+  max-width:1000px;
+  padding-left:20px;
+  padding-right:20px;
 }
 
-.fixedWidth .contentWidth {
-  max-width:1222px;
+.noMargin {
+  .contentWidth {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  header {
+    padding-left:20px;
+    padding-right:20px;
+  }
+}
+
+.contentWidth {
   min-width:840px;
   margin:0 auto;
   display:flex;
+  justify-content:space-between;
   padding-left:20px;
   padding-right:20px;
 
   #mainColumn {
+    flex:1;
     padding-left:0;
   }
 }
