--- a/src/shared/components/query/styles.module.scss
+++ b/src/shared/components/query/styles.module.scss
@@ -196,7 +196,7 @@ div.SelectedStudiesWindow {
   }
 
   ul.cancerTypeList {
-    background: rgb(232, 241, 248);
+    background: $lightBlue;
     padding: 0px;
     margin: 0px !important;
     width: 230px;
