--- a/src/globalStyles/variables.scss
+++ b/src/globalStyles/variables.scss
@@ -8,7 +8,7 @@ $darkCream: #ECE7DB;
 $darkestCream: #DAD1BC;
 $darkBrown: #585755;
 
-$lightBlue: #dee9f1;
+$lightBlue: #F1F6FE;
 $mediumBlue: #1982b8;
 
 $lightGrey: #ececec;
@@ -30,4 +30,4 @@ $brand-primary: #3786C2;
 
 $borderColor:$mediumGrey;
 
-$headerColor: #777;
+$headerColor: #000;
