--- a/src/shared/components/sectionHeader/styles.module.scss
+++ b/src/shared/components/sectionHeader/styles.module.scss
@@ -9,7 +9,7 @@ div.SectionHeader {
     font: normal normal 700 16px/22px 'Helvetica Neue', Helvetica, Arial, sans-serif !important;
     color:#333 !important;
     flex-grow: 2;
-    margin: 0;
+    margin: 0 !important;
   }
 
   .error {
