Add TestimonialsPage.  Add view all 'testimonials' link and 'submit your own testimonial' link. Remove BarChart; Add link to DataSetsPage in its place.

--- a/src/shared/components/testimonials/testimonials.module.scss
+++ b/src/shared/components/testimonials/testimonials.module.scss
@@ -33,6 +33,19 @@
 
         }
 
+        .testimonial-links {
+            margin-top: 10px;
+
+            a:first-child{
+                float: left;
+            }
+
+            a:last-child {
+                float: right;
+            }
+
+        }
+
     }
 
 }
