--- a/src/pages/patientView/patient.scss
+++ b/src/pages/patientView/patient.scss
@@ -1,6 +1,10 @@
 
 .patientPageHeader {
 
+  .cohortNav {
+    text-align:right;
+  }
+
   position:relative;
   padding-left:45px;
   display:flex;
