use autosuggest component for study search https://github.com/cBioPortal/cbioportal/issues/2501
altering the search text should automatically zero out the cancer type selection


Former-commit-id: dc13d2340711638d940322ffbedb4d88fea4aced

--- a/src/shared/components/query/styles.module.scss
+++ b/src/shared/components/query/styles.module.scss
@@ -96,6 +96,7 @@ div.SelectedStudiesWindow {
 .CancerStudySelectorHeader {
   justify-content: space-between;
   align-items:center;
+
   h2 {
     padding: 0;
     margin:0;
@@ -109,6 +110,10 @@ div.SelectedStudiesWindow {
 
   :global(.Select-input) {
     height: 28px;
+  }
+
+  :global(.autosuggest) {
+    width:200px;
   }
 
   :global(.Select-placeholder),
