replace react-select with react-bootstrap-autosuggest
Former-commit-id: 9b304821c7d58995409e6535de83caf9af5a064c

--- a/src/shared/components/query/styles.module.scss
+++ b/src/shared/components/query/styles.module.scss
@@ -333,7 +333,7 @@ div.SelectedStudiesWindow {
 }
 
 .CaseSetSelector {
-  div:global(.Select) {
+  div:global(.autosuggest) {
     width: 555px;
   }
   textarea {
@@ -356,7 +356,7 @@ div.SelectedStudiesWindow {
 }
 
 .GeneSetSelector {
-  div:global(.Select) {
+  div:global(.autosuggest) {
     width: 555px;
     margin-bottom:8px;
   }
