Add show oncokb/civic/hotspot/cancergenome config
Former-commit-id: 283249a620ddbe4b12cef1646a755f9d32135bb6

--- a/my-index.ejs
+++ b/my-index.ejs
@@ -16,6 +16,10 @@
 //        __HOTSPOTS_API_ROOT__ = 'cbioportal-rc.herokuapp.com/proxy/cancerhotspots.org';
 //        __3D_HOTSPOTS_API_ROOT__ = 'cbioportal-rc.herokuapp.com/proxy/3dhotspots.org/3d';
 //        __ONCOKB_API_ROOT__ = 'cbioportal-rc.herokuapp.com/proxy/oncokb.org/api/v1';
+        window.showCivic = true;
+        window.showHotspot = true;
+        window.showMyCancerGenome = true;
+        window.showOncoKB = true;
         window.oncoKBApiUrl = "oncokb.org/api/v1";
     </script>
     <script src="reactapp/common.bundle.js"></script>
