--- a/my-index.ejs
+++ b/my-index.ejs
@@ -11,8 +11,8 @@
         // window.enableDarwin = true;
 
         // Set default API in case none is specified in .env
-        __API_ROOT__ = 'cbioportal-rc.herokuapp.com';
-//        __HOTSPOTS_API_ROOT__ = 'cbioportal-rc.herokuapp.com/proxy/cancerhotspots.org';
+        __API_ROOT__ = 'cbioportal-release-1-7-0.herokuapp.com';
+//        __HOTSPOTS_API_ROOT__ = 'cbioportal-rc.com/proxy/cancerhotspots.org';
 //        __3D_HOTSPOTS_API_ROOT__ = 'cbioportal-rc.herokuapp.com/proxy/3dhotspots.org/3d';
 //        __ONCOKB_API_ROOT__ = 'cbioportal-rc.herokuapp.com/proxy/oncokb.org/api/v1';
     </script>
