adjust padding and border color of custom patients textarea

--- a/src/shared/components/query/styles.module.scss
+++ b/src/shared/components/query/styles.module.scss
@@ -338,11 +338,13 @@ div.SelectedStudiesWindow {
 .CaseSetSelector {
   div:global(.autosuggest) {
     width: 555px;
+    margin-bottom:10px;
   }
   textarea {
     width: 555px;
     resize: vertical;
     padding: 5px;
+    border-color:$borderColor;
   }
   .radioRow {
     div {
