Resolve trim issue.

--- a/src/shared/components/query/styles.module.scss
+++ b/src/shared/components/query/styles.module.scss
@@ -391,6 +391,8 @@ div.SelectedStudiesWindow {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  width: 555px;
+  padding-top: 5px;
   span.icon {
     text-align: center;
     margin-right: 4px;
