fix style issues with gene set modals. fixes http://github.com/cBioPortal/cbioportal/issues/2598

--- a/src/shared/components/paginationControls/paginationControls.module.scss
+++ b/src/shared/components/paginationControls/paginationControls.module.scss
@@ -15,3 +15,7 @@
     padding: 0 5px 0 5px;
     display: inline-block;
 }
+
+:global(.legacy) .paginationControls button i {
+    line-height:1.5;
+}
