--- a/src/shared/components/annotation/styles/oncoKbCard.custom.scss
+++ b/src/shared/components/annotation/styles/oncoKbCard.custom.scss
@@ -18,3 +18,8 @@ div.oncogenicity, div.mutation-effect {
 .oncokb-card table.treatments thead th {
     border-bottom: 2px solid #1c75cd;
 }
+
+.oncokb-card .treatments-wrapper {
+    max-height: 250px;
+    overflow-x: auto;
+}
