revert 25d8cb66db10fcb0b8bba118005c64322f1322bf [formerly 9b304821c7d58995409e6535de83caf9af5a064c]. restore use of react-select for gene and case set selectors
Former-commit-id: ad231e84ce3dfbb780b08c2fea3b023ea7c6bd4f

--- a/src/shared/components/query/styles.module.scss
+++ b/src/shared/components/query/styles.module.scss
@@ -336,7 +336,7 @@ div.SelectedStudiesWindow {
 }
 
 .CaseSetSelector {
-  div:global(.autosuggest) {
+  div:global(.Select) {
     width: 555px;
     margin-bottom:10px;
   }
@@ -361,7 +361,7 @@ div.SelectedStudiesWindow {
 }
 
 .GeneSetSelector {
-  div:global(.autosuggest) {
+  div:global(.Select) {
     width: 555px;
     margin-bottom:8px;
   }
