center fixed width pages

--- a/src/globalStyles/global.scss
+++ b/src/globalStyles/global.scss
@@ -296,7 +296,7 @@ th.reactable-header-sort-asc:after {
   width:1200px;
   padding-left:20px;
   padding-right:20px;
-  margin:0;
+  margin:0 auto;
 }
 
 .noMargin {
