--- a/src/globalStyles/global.scss
+++ b/src/globalStyles/global.scss
@@ -209,9 +209,9 @@ th.reactable-header-sort-asc:after {
 
   &.twoColumn {
     .contentWrapper {
-      .contentWidth {
-        padding-right: 0;
-      }
+      //.contentWidth {
+      //  padding-right: 0;
+      //}
     }
   }
 
@@ -221,11 +221,11 @@ th.reactable-header-sort-asc:after {
   #mainColumn {
     padding-right: $gutterWidth;
   }
-  .contentWrapper {
-    .contentWidth {
-      padding-right: 0;
-    }
-  }
+  //.contentWrapper {
+  //  .contentWidth {
+  //    padding-right: 0;
+  //  }
+  //}
 }
 
 
