showing an error icon in place of onco kb icon in case cancer type cannot be resolved
Signed-off-by: Onur Sumer <s.onur.sumer@gmail.com>

Former-commit-id: b2b1ec4aa869f5ee2c93fef0bda29cf3e9d91f68

--- a/src/shared/components/annotation/styles/annotation.module.scss
+++ b/src/shared/components/annotation/styles/annotation.module.scss
@@ -7,6 +7,14 @@
   margin-top: -4px;
 }
 
+.annotation-item-error {
+  width: 16px;
+  height: 18px;
+  float: left;
+  line-height: 22px;
+  display: inline-block;
+}
+
 .annotation-item img {
   margin: 4px 0 2px 6px;
 }
